force-app/main/default/objects/custom_create7__c/custom_create7__c.object-meta.xml
<CustomObject>
    <label>Custom created object7</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects7</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>