force-app/main/default/objects/custom_create7__c/fields/custom_create_7field507__c.field-meta.xml
<CustomField>
    <fullName>custom_create_7field507__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 7field507</label>
    <type>Checkbox</type>
</CustomField>